[package]
edition = "2021"
name = "rust-merkle-tree"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.16", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "2.16.13"
anyhow = "1.0.95"
hex = "0.4.3"
sha2 = { version = "0.10.8", default-features = false }
rayon = "1.10.0"
log = "0.4.25"
env_logger = "0.11.6"

[dev-dependencies]
rand = "0.9.0"

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
lto = true
strip = "symbols"
