[package]
edition = "2021"
name = "rust-merkle-tree"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3.5.2"
anyhow = "1.0.102"
hex = "0.4.3"
sha2 = { version = "0.10.9", default-features = false }
rayon = "1.11.0"
log = "0.4.29"
env_logger = "0.11.9"

[dev-dependencies]
rand = "0.10.0"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
strip = "symbols"
